Baseline enquiry letter journey finished

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -128,13 +128,21 @@
              contact
             </dd>
           </div>
+          <div class="nhsuk-summary-list__row">
+            <dt class="nhsuk-summary-list__key">
+              We cannot confirm your details:
+            </dt>
+            <dd class="nhsuk-summary-list__value">
+             1234512345
+            </dd>
+          </div>
         </dl>
       </div>
     </div>
      
      
 
-    <hr>
+  
  
      <div class="nhsuk-card">
        <div class="nhsuk-card__content">
@@ -166,7 +174,7 @@
           Penalty Charge Notice Journey
          </h3>
          <p class="nhsuk-card__description nhsuk-u-margin-bottom-5">An online service to challenge or pay a PCN.</p>
-         <a class="nhsuk-button" href="v5/respond-to-your-letter">Latest prototype version</a>
+         <a class="nhsuk-button" href="v6-pcn/respond-to-your-letter">Latest prototype version</a>
          <div class="nhsuk-action-link">
            <a class="nhsuk-action-link__link" href="penalty">
              <svg class="nhsuk-icon nhsuk-icon__arrow-right-circle" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" width="36" height="36">
