--- a/app/views/v5-enquiry/check-personal-details-dwp.html
+++ b/app/views/v5-enquiry/check-personal-details-dwp.html
@@ -55,7 +55,7 @@
         </div> -->
 
         <div class="nhsuk-hint" id="contact-hint">
-          We took these details from your prescription form.<br><br>
+          We took these details from your prescription.<br><br>
 They should match what was shown on your exemption or prepayment certificate, or on your benefit award.
         </div>
         
