--- a/app/views/v5-enquiry/we-need-proof.html
+++ b/app/views/v5-enquiry/we-need-proof.html
@@ -57,7 +57,7 @@
     <details class="nhsuk-details">
       <summary class="nhsuk-details__summary">
         <span class="nhsuk-details__summary-text">
-          You were getting Income-based Jobseeker's Allowance (JSA)
+          You were getting income-based Jobseeker's Allowance (JSA)
         </span>
       </summary>
       <div class="nhsuk-details__text">
