--- a/app/views/v5-enquiry/what-you-want-to-do-next.html
+++ b/app/views/v5-enquiry/what-you-want-to-do-next.html
@@ -41,7 +41,7 @@ What do you want to do next?
             <div class="nhsuk-radios__item">
               <input class="nhsuk-radios__input" id="penalty-confirm-pay" name="confirm" type="radio" value="pay">
               <label class="nhsuk-label nhsuk-radios__label" for="pay">
-                I'm not entitled to free NHS prescriptions and want to know what happens next
+                I was not entitled to free NHS prescriptions and want to know what happens next
               </label>
           </div>
           <!-- <div class="nhsuk-hint" id="example-with-hint-text-hint">
