--- a/app/views/v6-pcn/check-personal-details-dwp.html
+++ b/app/views/v6-pcn/check-personal-details-dwp.html
@@ -40,18 +40,26 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="confirmation-page" method="post" class="form">
+      <form action="confirmation-page-dwp" method="post" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1 class="nhsuk-heading-l">Check your personal details are correct</h1>
+        <h1 class="nhsuk-heading-l">Check that your details on the prescription are correct</h1>
         
         
         
         
+        <!-- <div class="nhsuk-inset-text">
+          <span class="nhsuk-u-visually-hidden">Information: </span>
+          <p>These are the personal details we currently hold for you. </p>
+          <p>If these do not match, we may not be able to find your exemption and you may receive a penalty charge notice.</p>
+        </div> -->
+
         <div class="nhsuk-hint" id="contact-hint">
           We took these details from your prescription.<br><br>
 They should match what was shown on your exemption or prepayment certificate, or on your benefit award.
         </div>
+        
+
         
         <dl class="nhsuk-summary-list">
 
@@ -65,7 +73,7 @@ They should match what was shown on your exemption or prepayment certificate, or
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="update-name">
+              <a href="update-name-dwp">
                 Change<span class="nhsuk-u-visually-hidden"> name</span>
               </a>
         
@@ -83,7 +91,7 @@ They should match what was shown on your exemption or prepayment certificate, or
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="update-dob">
+              <a href="update-dob-dwp">
                 Change<span class="nhsuk-u-visually-hidden"> date of birth</span>
               </a>
         
@@ -101,7 +109,7 @@ They should match what was shown on your exemption or prepayment certificate, or
         
             <dd class="nhsuk-summary-list__actions">
         
-              <a href="update-address">
+              <a href="update-address-dwp">
                 Change<span class="nhsuk-u-visually-hidden"> address</span>
               </a>
         
@@ -149,14 +157,16 @@ They should match what was shown on your exemption or prepayment certificate, or
         
           </div>
         
-         <br>
+        
+       <br>
     <div class="nhsuk-form-group">
     <button class="nhsuk-button" type="submit">
      Continue
-    </button>
-    </div></form>
-
+    </button></form>
     <p><a href="respond-to-your-letter">Cancel</a></p>
+    </div>
+
+        
    
 
     </div>
