--- a/app/views/v6-pcn/confirmation-page.html
+++ b/app/views/v6-pcn/confirmation-page.html
@@ -12,7 +12,7 @@ An exemption has been found
 
 
       <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1>An exemption has been confirmed</h1>
+        <h1>An exemption has been found</h1>
       <div class="nhsuk-card" style="background: #005EB8; margin-top: 0;">
         <div class="nhsuk-card__content">
           <h2 class="nhsuk-card__heading" style="text-align: center; color: white;">
@@ -50,15 +50,12 @@ An exemption has been found
       </ul> 
         <p>Make sure these are correct at your GP surgery, dental practice, and any benefits organisations.</p>
      <p>If any of your details are not up to date, you may receive another enquiry letter in the future.</p>
-     <p> <a href="https://services.nhsbsa.nhs.uk/check-for-help-paying-nhs-costs/start">Check if you are currently entitled to help with your health costs</a>.</p>
-    <h3>Universal Credit</h2>
-     <p>If you get Universal Credit, your entitlement to help with your health costs can change. It depends on your take-home pay in the last assessment period.</p>
-     <p><a href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help/getting-benefits/hwhc-universal-credit">Read more about Universal Credit exemptions</a>.</p>
         
+        <p> <a href="https://services.nhsbsa.nhs.uk/check-for-help-paying-nhs-costs/start">Check if you are currently entitled to help with your health costs.</a></p>
        
 <h3>Feedback</h3>
 <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-<p><a href="">Leave feedback</a>.</p>
+<p><a href="">Leave feedback</a></p>
    
 
     </div>
