--- a/app/views/v6-pcn/what-you-need-to-do-next.html
+++ b/app/views/v6-pcn/what-you-need-to-do-next.html
@@ -23,7 +23,7 @@ What do you want to do next?
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="filter-options" method="get" class="form">
+      <form action="dwp-version6" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
         <h1 class="nhsuk-heading-l">What do you want to do next?</h1>
@@ -41,7 +41,7 @@ What do you want to do next?
             <div class="nhsuk-radios__item">
               <input class="nhsuk-radios__input" id="penalty-confirm-pay" name="confirm" type="radio" value="pay">
               <label class="nhsuk-label nhsuk-radios__label" for="pay">
-                I was not entitled to free NHS prescriptions and want to know what happens next
+                I was not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice
               </label>
           </div>
           <!-- <div class="nhsuk-hint" id="example-with-hint-text-hint">
@@ -66,6 +66,20 @@ What do you want to do next?
           </fieldset>
         
         </div>
+
+        <details class="nhsuk-details">
+          <summary class="nhsuk-details__summary">
+            <span class="nhsuk-details__summary-text">
+              I was not entitled to free NHS prescriptions but have an exceptional reason why I made the claim
+            </span>
+          </summary>
+          <div class="nhsuk-details__text">
+            <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you
+              can ask us to review your case.</p>
+            <p><a href="who-can-ask-for-review">Find out if you can ask for a review.</a> </p>
+    
+          </div>
+        </details>
     <div class="nhsuk-form-group">
     <button class="nhsuk-button" type="submit">
      Continue
