--- a/app/views/v5-enquiry/best-way-to-contact.html
+++ b/app/views/v5-enquiry/best-way-to-contact.html
@@ -39,7 +39,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
       <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h1 class="nhsuk-heading-l">We'll review your case and get back to you. What is the best way for us to contact you?</h1>
+        <h1 class="nhsuk-heading-l">We'll review your case and get back to you. How can we contact you?</h1>
 
       <form action="contact-method" method="post" class="form">
 
@@ -48,7 +48,7 @@
           <fieldset class="nhsuk-fieldset">
           
             <div class="nhsuk-hint" id="symptoms-hint">
-              Select all options that are relevant to you
+              Select all options that are relevant to you.
             </div>
       
             <div class="nhsuk-checkboxes">
