--- a/app/views/v6-pcn/date-of-birth.html
+++ b/app/views/v6-pcn/date-of-birth.html
@@ -40,37 +40,48 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="benefit-exemption" method="get" class="form">
+      <form action="enter-postcode" method="post" class="form">
 
-        <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h2>Did you have a valid [NHSBSA Benefit] between 22 November 2019 and 30 November 2019?</h2>
-        <div class="nhsuk-form-group">
-
-          <div class="nhsuk-radios nhsuk-radios">
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="benefit-exemption" name="exemption" type="radio" value="yes">
-                <label class="nhsuk-label nhsuk-radios__label" for="yes">
-                    Yes
-                </label>
-            </div>
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="benefit-exemption" name="exemption" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="no">
-                    No
-                </label>
-            </div>
+        <span class="nhsuk-caption-l">Your details</span>
+        <h1 class="nhsuk-heading-l">What is your date of birth?</h1>
+        <div class="nhsuk-hint" id="example-hint">
+          For example, 31 3 1980
         </div>
-          </fieldset>
+    
+        <div class="nhsuk-date-input" id="example">
+          <div class="nhsuk-date-input__item">
+            <div class="nhsuk-form-group">
+              <label class="nhsuk-label nhsuk-date-input__label" for="day">
+                Day
+              </label>
+              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="day" name="day" type="text" pattern="[0-9]*" inputmode="numeric">
+            </div>
+          </div>
+          <div class="nhsuk-date-input__item">
+            <div class="nhsuk-form-group">
+              <label class="nhsuk-label nhsuk-date-input__label" for="month">
+                Month
+              </label>
+              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="month" name="month" type="text" pattern="[0-9]*" inputmode="numeric">
+            </div>
+          </div>
+          <div class="nhsuk-date-input__item">
+            <div class="nhsuk-form-group">
+              <label class="nhsuk-label nhsuk-date-input__label" for="year">
+                Year
+              </label>
+              <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4" id="year" name="year" type="text" pattern="[0-9]*" inputmode="numeric">
+            </div>
+          </div>
         
-        </div>
     <div class="nhsuk-form-group">
     <button class="nhsuk-button" type="submit">
      Continue
     </button>
     <p><a href="respond-to-your-letter">Cancel</a></p>
     </div>
+
     
-        
    
 
     </div>
