--- a/app/views/v6-pcn/enter-exemption-certificate-number.html
+++ b/app/views/v6-pcn/enter-exemption-certificate-number.html
@@ -24,54 +24,42 @@
 {% endblock %}
 
 {% block outerContent %}
-
+  
 {% endblock %}
 
 {% block content %}
-
+<div class="nhsuk-phase-banner nhsuk-u-margin-bottom-5 no-print">
+  <p class="nhsuk-phase-banner__content">
+    <strong class="nhsuk-tag nhsuk-phase-banner__content__tag">
+      BETA
+     </strong>
+     <span class="nhsuk-phase-banner__text">
+       This is a new service - your <a class="nhsuk-link" href="#" target="_blank" rel="noopener">feedback<span class="nhsuk-u-visually-hidden"> (opens in a new tab)</span></a> will help us to improve it.
+    </span>
+   </p>
+ </div>
 <div class="nhsuk-back-link">
-<a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
-  <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
-    <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
-  </svg>
-  Go back</a>
-</div>
-
+  <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
+    <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
+      <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
+    </svg>
+    Go back</a>
+  </div>
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
 
-      <form action="benefit-exemption" method="get" class="form">
+      <form action="v4-certificate-number-input" method="get" class="form">
 
         <span class="nhsuk-caption-l">Confirm your entitlement</span>
-        <h2>Did you have a valid [NHSBSA Benefit] between 22 November 2019 and 30 November 2019?</h2>
+        <h1>What is your [Benefit] number?</h1>
         <div class="nhsuk-form-group">
-
-          <div class="nhsuk-radios nhsuk-radios">
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="benefit-exemption" name="exemption" type="radio" value="yes">
-                <label class="nhsuk-label nhsuk-radios__label" for="yes">
-                    Yes
-                </label>
-            </div>
-            <div class="nhsuk-radios__item">
-                <input class="nhsuk-radios__input" id="benefit-exemption" name="exemption" type="radio" value="no">
-                <label class="nhsuk-label nhsuk-radios__label" for="no">
-                    No
-                </label>
-            </div>
+          
+          <input class="nhsuk-input nhsuk-u-width-one-half" id="cert-number-input" name="certificatenumber" type="text">
         </div>
-          </fieldset>
-        
-        </div>
-    <div class="nhsuk-form-group">
-    <button class="nhsuk-button" type="submit">
-     Continue
-    </button>
-    <p><a href="respond-to-your-letter">Cancel</a></p>
-    </div>
-    
-        
-   
+        <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
+          Continue
+        </button>
+       </form>
 
     </div>
   </div>
