--- a/app/views/v6-pcn/update-dob-dwp.html
+++ b/app/views/v6-pcn/update-dob-dwp.html
@@ -43,29 +43,58 @@
     </svg>
     Go back</a>
 </div>
+
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="/v3/what-is-dob" method="post" class="form">
+    <form action="check-personal-details-dwp" method="post" class="form">
 
-      <span class="nhsuk-caption-l">Your details</span>
-      <h1 class="nhsuk-heading-l">Enter your reference number again</h1>
-      <div class="nhsuk-form-group">
-        <label class="nhsuk-label" for="one-half">
-          <div class="nhsuk-hint" id="example-with-hint-text-hint">
-            We ask this to make sure we find the correct record.
-          </div>
-        </label>
-        <input class="nhsuk-input nhsuk-u-width-one-half" id="one-half" name="one-half" type="text">
+      <span class="nhsuk-caption-l">Confirm your entitlement</span>
+      <h1 class="nhsuk-heading-l">What is your date of birth?</h1>
+      <div class="nhsuk-hint" id="example-hint">
+        For example, 31 3 1980
       </div>
-      <a href="date-of-birth" class="nhsuk-button">
-        Continue
-      </a>
-      <p><a href="respond-to-your-letter">Cancel</a></p>
-    </form>
-   
 
+      <div class="nhsuk-date-input" id="example">
+        <div class="nhsuk-date-input__item">
+          <div class="nhsuk-form-group">
+            <label class="nhsuk-label nhsuk-date-input__label" for="day">
+              Day
+            </label>
+            <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="day" name="day" type="text"
+              pattern="[0-9]*" inputmode="numeric">
+          </div>
+        </div>
+        <div class="nhsuk-date-input__item">
+          <div class="nhsuk-form-group">
+            <label class="nhsuk-label nhsuk-date-input__label" for="month">
+              Month
+            </label>
+            <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-2" id="month" name="month" type="text"
+              pattern="[0-9]*" inputmode="numeric">
+          </div>
+        </div>
+        <div class="nhsuk-date-input__item">
+          <div class="nhsuk-form-group">
+            <label class="nhsuk-label nhsuk-date-input__label" for="year">
+              Year
+            </label>
+            <input class="nhsuk-input nhsuk-date-input__input nhsuk-input--width-4" id="year" name="year" type="text"
+              pattern="[0-9]*" inputmode="numeric">
+          </div>
+        </div>
+
+        <div class="nhsuk-form-group">
+          <button class="nhsuk-button" type="submit">
+            Continue
+          </button>
+          <p class="navigation"><a class="cancel" href="respond-to-your-letter">Cancel</a></p>
+        </div>
+
+
+
+
+      </div>
   </div>
-</div>
 
-{% endblock %}
+  {% endblock %}
