--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -564,7 +564,7 @@ NHS.UK prototype kit
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell">500 error</td>
-              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/500-error">Somethings gone wrong</a></td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/500-error">There is a problem with the service</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
                   BOTH
                 </strong></td>
@@ -574,7 +574,7 @@ NHS.UK prototype kit
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell">404 error</td>
-              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/404-error">Somethings gone wrong</a></td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/404-error">Page not found</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
                   BOTH
                 </strong></td>
