Baseline enquiry letter journey finished

--- a/app/views/v5-enquiry/adhoc-screens/500-error.html
+++ b/app/views/v5-enquiry/adhoc-screens/500-error.html
@@ -28,7 +28,7 @@ There is a problem with the service
     
 
     <p>We are currently experiencing a problem with this service and are working to fix it as soon as possible.</p>
-    <p>Try again later</p>
+    <p>Try again later.</p>
 
 
   <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have any other queries</a>.</p>
