Baseline enquiry letter journey finished

--- a/app/views/user-research-journies/did-you-have-this-exemption.html
+++ b/app/views/user-research-journies/did-you-have-this-exemption.html
@@ -43,7 +43,7 @@
       <form action="benefit-exemption" method="get" class="form">
 
         <span class="nhsuk-caption-m">Confirm your entitlement</span>
-        <h2>Did you have a valid [NHSBSA Benefit] between 22 November 2019 and 30 November 2019?</h2>
+        <h2>Did you have a valid medical exemption certificate between 22 November 2019 and 30 November 2019?</h2>
         <div class="nhsuk-form-group">
 
           <div class="nhsuk-radios nhsuk-radios">
