--- a/app/views/user-research-journies/enquiry-letter-details-copy.html
+++ b/app/views/user-research-journies/enquiry-letter-details-copy.html
@@ -45,8 +45,13 @@
     
        <h1>Why you've been sent enquiry letter</h1>
 
+       <div class="nhsuk-inset-text">
+        <span class="nhsuk-u-visually-hidden">Information: </span>
+        <p>Enquiry letter reference number: <strong>123456789</strong>.</p>
+      </div>
+
        
-      <h2>Enquiry letter reference number: 123456789</h2>
+    
       <p>We have not been able to confirm you were entitled to free NHS prescriptions using these details.</p>
 
        <p>We check details on your prescription match the details on your exemption certificate, qualifying benefit, or prepayment certificate.</p>
