--- a/app/views/user-research-journies/exemption-certificate-number.html
+++ b/app/views/user-research-journies/exemption-certificate-number.html
@@ -28,7 +28,7 @@ Did you know your [Benefit] number?
 
 
     <span class="nhsuk-caption-m">Confirm your entitlement</span>
-    <h2>Do you know your [Benefit] number?</h2>
+    <h2>Do you know your medical exemption certificate number?</h2>
     <div class="nhsuk-form-group">
 
 
@@ -53,7 +53,7 @@ Did you know your [Benefit] number?
 
             <div class="nhsuk-form-group">
               <label class="nhsuk-label" for="email">
-                [Benefit] number
+                Medical exemption certificate number
               </label>
               <input class="nhsuk-input nhsuk-u-width-one-half" id="cert-number-input" name="certificatenumber"
                 type="text">
