--- a/app/views/v5-enquiry/who-can-ask-for-review.html
+++ b/app/views/v5-enquiry/who-can-ask-for-review.html
@@ -18,7 +18,7 @@ Asking for a review
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
       <span class="nhsuk-caption-m">Confirm your entitlement</span>
-      <h1>
+      <h1 class="nhsuk nhsuk-heading-l">
         Asking for a review
       </h1>
     
