--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -563,6 +563,17 @@ NHS.UK prototype kit
 
           <tbody class="nhsuk-table__body">
             <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Fieldset error</td>
+              <td class="nhsuk-table__cell "><a href="v5-enquiry/error-messages/fieldset-error">Fieldset error example - address input</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
               <td class="nhsuk-table__cell">500 error</td>
               <td class="nhsuk-table__cell "><a href="v5-enquiry/adhoc-screens/500-error">There is a problem with the service</a></td>
               <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
