--- a/app/views/v5-enquiry/adhoc-screens/cannot-confirm-3rd.html
+++ b/app/views/v5-enquiry/adhoc-screens/cannot-confirm-3rd.html
@@ -32,7 +32,7 @@
       </h1>
     
       <p>We have been unable to confirm your identity using the information you've provided.</p>
-      <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have received a letter</a>.</p>
+      <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have received a letter about claiming help with your health costs</a>.</p>
       <h3>Feedback</h3>
       <p>Leaving feedback takes 5 minutes. Your comments will help us provide a better service.</p>
       <p><a href="">Leave feedback</a></p>
