--- a/app/views/v6-pcn/dd-check-answers.html
+++ b/app/views/v6-pcn/dd-check-answers.html
@@ -47,7 +47,7 @@
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="confirmation-page" method="post" class="form">
+    <form action="enter-bank-details" method="post" class="form">
 
       <span class="nhsuk-caption-m">Confirm your entitlement</span>
       <h1 class="nhsuk-heading-l">Check your answers are correct</h1>
