--- a/app/views/index-old.html
+++ b/app/views/index-old.html
@@ -12,8 +12,9 @@
 
 <!-- Set the page title -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+  NHS.UK prototype kit Iona
 {% endblock %}
+
 
 <!-- For adding a breadcrumb -->
 <!-- Code examples can be found at https://service-manual.nhs.uk/design-system/components/breadcrumbs -->
