--- a/app/views/v6-pcn/confirm-direct-debit.html
+++ b/app/views/v6-pcn/confirm-direct-debit.html
@@ -33,7 +33,7 @@ Confirm and submit your Direct Debit
   
     <p>If we are unable to take a payment, you may have to pay extra charges. If we are unable to take payments on more than one occasion, you may not be able to pay by Direct Debit in the future.</p>
     
-    <h3>Direct Debit summary</h3>
+    <h2 >Direct Debit summary</h3>
     <dl class="nhsuk-summary-list">
 
       <div class="nhsuk-summary-list__row">
@@ -82,6 +82,15 @@ Confirm and submit your Direct Debit
         
       </div>
 
+      
+      
+    
+    </dl>
+    <h3 class="nhsuk-heading-m">Your bank details</h3>
+    <dl class="nhsuk-summary-list">
+
+      
+
       <div class="nhsuk-summary-list__row">
         <dt class="nhsuk-summary-list__key">
           Account number
@@ -118,7 +127,7 @@ Confirm and submit your Direct Debit
 ​<div class="nhsuk-card">
   <div class="nhsuk-card__content">
 
-    <img src="direct-debit.png">
+    <img src="https://www.guhg.co.uk/wp-content/uploads/2018/11/direct-debit-website-992x561-e1542983967438-1140x720.png" width="150px" alt="Picture of DD logo" style="display:block; margin-bottom: 10px;">
     
     <p>We will send this Direct Debit instruction to: <strong>HSBC BANK PLC, Guernsey, Channel Islands</strong>.</p>
   <p>Please pay the NHSBSA PECS Direct Debits from the account detailed in this instruction subject to the safeguards assured by the Direct Debit Guarantee. I understand that this instruction may remain with NHSBSA PECS, and if so, details will be passed electronically to my Bank/Building Society</p>
@@ -135,24 +144,24 @@ Confirm and submit your Direct Debit
 
 
 
-    <p>You must agree to the terms and conditions.</p>
+ 
 
     <div class="nhsuk-checkboxes">
         
                 
         
-      <div class="nhsuk-checkboxes__item">
+      <div class="nhsuk-checkboxes__item nhsuk-u-margin-bottom-7">
         <input class="nhsuk-checkboxes__input" id="example-3" name="example" type="checkbox" value="text message" required>
         <label class="nhsuk-label nhsuk-checkboxes__label" for="example-3">
          <strong>I agree to the terms and conditions</strong>
         </label>
       </div>
 
-    </div><br>
+    </div>
 ​
-    <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
+    <a class="nhsuk-button" data-module="nhsuk-button" type="submit" href="dd-confirmed">
       Continue
-    </button>
+    </a>
 ​
     <p><a href="url">Cancel</a></p>
 
