Added start and CYA page iterations with refund guidance and content trim

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -426,6 +426,41 @@ NHS.UK prototype kit
             </tr>
 
           </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Cannot set up direct debit</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/error-messages/cannot-set-up-direct-debit">Direct debit error
+                  failed</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Payment not authorised</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/error-messages/payment-not-authorised">Payment error
+                  failed</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Payment not collected</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/error-messages/payment-not-collected">Payment error
+                  failed</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
         </table>
 
         <h3>Done pages</h3>
