--- a/app/views/v5-enquiry/we-need-proof.html
+++ b/app/views/v5-enquiry/we-need-proof.html
@@ -48,7 +48,7 @@
     </h1>
 
 
-    <h2>Type of proof we need to see</h2>
+
     <p>We need one example of proof from the following list. Your proof must have been valid at the time you claimed a
       free NHS prescription.</p>
 
@@ -82,11 +82,11 @@
     <details class="nhsuk-details">
       <summary class="nhsuk-details__summary">
         <span class="nhsuk-details__summary-text">
-          You were named on your partner's Pension Credit Guarantee Credit
+          You were named on your partner's Pension Credit Guarantee Credit award
         </span>
       </summary>
       <div class="nhsuk-details__text">
-        <p>A clear image of you or your partner's Pension Credit Guarantee Credit award letter.</p>
+        <p>A clear image of your partner's Pension Credit Guarantee Credit award letter.</p>
       </div>
     </details>
     <details class="nhsuk-details">
@@ -122,7 +122,7 @@
         </span>
       </summary>
       <div class="nhsuk-details__text">
-        <p>Send a clear image of your certificate.</p>
+        <p>A clear image of your certificate.</p>
         <p>This could either be a paper certificate you were sent by post or a digital certificate you were sent by
           email.
         </p>
