--- a/app/views/v6-pcn/cannot-confirm-pcn.html
+++ b/app/views/v6-pcn/cannot-confirm-pcn.html
@@ -51,8 +51,8 @@
 
          
             <ul>
-              <li>Pay the total amount of 168.80</li>
-              <a class="nhsuk-button" href></a>
+              <li>Pay the total amount of 168.80</li><br>
+              <a class="nhsuk-button" href="payment-method">Pay Now</a>
               <li>Send us proof to show that you were entitled to free NHS prescriptions or had a valid prescription Prescription prepayment Prepayment certificate Certificate between 18 November 2019 and 30 November 2019.</li>
               <p><a href="we-need-proof">Find out about what we can accept as proof and where to send it</a></p>
             </ul>
@@ -60,10 +60,7 @@
 
           
 
-          <h3>If you were not entitled</h2>
-
-         
-            <p>You will be sent a Penalty Charge Notice. This will include information on how and when to pay your penalty charge.</p>
+          
          
 
           <p>If you were not entitled to free NHS prescriptions but have an exceptional reason why you made this claim, you can ask us to review your enquiry letter. <a href="who-can-ask-for-review">Find out if you can ask for a review</a></p>
