--- a/app/views/v6-pcn/confirm-direct-debit.html
+++ b/app/views/v6-pcn/confirm-direct-debit.html
@@ -86,6 +86,8 @@ Confirm and submit your Direct Debit
       
     
     </dl>
+
+    <p>You're responsible for making sure that payments can be taken on these dates.</p>
     <h3 class="nhsuk-heading-m">Your bank details</h3>
     <dl class="nhsuk-summary-list">
 
