--- a/app/views/v6-pcn/confirmation-page-dwp-not-uc.html
+++ b/app/views/v6-pcn/confirmation-page-dwp-not-uc.html
@@ -51,9 +51,9 @@ An exemption has been found
         <p>Make sure these are correct at your GP surgery, dental practice, and any benefits organisations.</p>
      <p>If any of your details are not up to date, you may receive another Penalty Charge Notice in the future.</p>
      <p> <a href="https://services.nhsbsa.nhs.uk/check-for-help-paying-nhs-costs/start">Check if you are currently entitled to help with your health costs</a>.</p>
-    <h3>Universal Credit</h2>
+    <!-- <h3>Universal Credit</h2>
      <p>If you get Universal Credit, your entitlement to help with your health costs can change. It depends on your take-home pay in the last assessment period.</p>
-     <p><a href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help/getting-benefits/hwhc-universal-credit">Read more about Universal Credit exemptions</a>.</p>
+     <p><a href="https://www.nhsbsa.nhs.uk/check-if-youre-eligible-help/getting-benefits/hwhc-universal-credit">Read more about Universal Credit exemptions</a>.</p> -->
         
        
 <h3>Feedback</h3>
