--- a/app/views/v6-pcn/confirmation-page.html
+++ b/app/views/v6-pcn/confirmation-page.html
@@ -40,7 +40,7 @@ An exemption has been found
       
       <p><a href="">Print this page</a></p>
       
-      <h2>How to avoid a future enquiry letter</h2>
+      <h2>How to avoid a future Penalty Charge Notice</h2>
       <p>We match exemptions using a combination of your:</p>
       <ul>
         <li>name</li>
@@ -49,7 +49,7 @@ An exemption has been found
         <li>NHS number</li>
       </ul> 
         <p>Make sure these are correct at your GP surgery, dental practice, and any benefits organisations.</p>
-     <p>If any of your details are not up to date, you may receive another enquiry letter in the future.</p>
+     <p>If any of your details are not up to date, you may receive another Penalty Charge Notice in the future.</p>
         
         <p> <a href="https://services.nhsbsa.nhs.uk/check-for-help-paying-nhs-costs/start">Check if you are currently entitled to help with your health costs.</a></p>
        
