--- a/app/views/v6-pcn/partial-payment-made.html
+++ b/app/views/v6-pcn/partial-payment-made.html
@@ -37,7 +37,7 @@ Payment confirmation
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Penalty Charge Notice reference number:
+              Penalty Charge Notice reference number
             </dt>
             <dd class="nhsuk-summary-list__value">
               123456789
@@ -49,7 +49,7 @@ Payment confirmation
         
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              So far you've paid:
+              So far you've paid
             </dt>
             <dd class="nhsuk-summary-list__value">
               £32.90
@@ -61,7 +61,7 @@ Payment confirmation
         
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              You still need to pay:
+              You still need to pay
             </dt>
             <dd class="nhsuk-summary-list__value">
               <p >£25</p>
