--- a/app/views/v6-pcn/partial-payment.html
+++ b/app/views/v6-pcn/partial-payment.html
@@ -26,58 +26,75 @@ Pay by card
       <form action="gov-pay-partial" method="post" class="form">
 
         <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
-        <h1 class="nhsuk-heading-l">Pay by card</h1>
+        <h1 class="nhsuk-heading-l">How much are you paying today?</h1>
         <div class="nhsuk-form-group">
-<h2>How much are you paying today?</h2>
-<p>It can take up to 24 hours for payment information to update.</p>
-<div class="nhsuk-card">
-  <div class="nhsuk-card__content">
-    <h3 class="nhsuk-card__heading">
-      Penalty Charge Notice amount
 
-    </h3>
-    <dl class="nhsuk-summary-list nhsuk-summary-list">
-
+          <div class="nhsuk-card">
+            <div class="nhsuk-card__content">
+              <h3 class="nhsuk-card__heading">
+                Penalty Charge Notice amount
       
-
+              </h3>
+              <dl class="nhsuk-summary-list nhsuk-summary-list">
       
-      <div class="nhsuk-summary-list__row">
-        <dt class="nhsuk-summary-list__key">
-          Total amount:
-        </dt>
-        <dd class="nhsuk-summary-list__value">
-          £57.90
-        </dd>
+                
+      
+                
+                <div class="nhsuk-summary-list__row">
+                  <dt class="nhsuk-summary-list__key">
+                    Total amount
+                  </dt>
+                  <dd class="nhsuk-summary-list__value">
+                    £57.90
+                  </dd>
+      
+                </div>
+                
+      
+      
+              </dl>
+              <h3 class="nhsuk-card__heading">
+                Previous payments
+              </h3>
+      
+            
+              <dl class="nhsuk-summary-list nhsuk-summary-list">
+      
+                <div class="nhsuk-summary-list__row">
+                  <dt class="nhsuk-summary-list__key">
+                    Payments made
+                  </dt>
+                  <dd class="nhsuk-summary-list__value">
+                    £7.90
+                  </dd>
+      
+                </div>
+      
+                
+                
+      
+      
+              </dl>
+              <p style="font-weight: bold; font-size:36px;">
+               Amount still to pay: £50
+      
+              </p>
+      
+             
+      
+            
+              
+              
+      
+            </div>
+          </div>
 
-      </div>
-      <div class="nhsuk-summary-list__row">
-        <dt class="nhsuk-summary-list__key">
-          Payments made:
-        </dt>
-        <dd class="nhsuk-summary-list__value">
-          £7.90
-        </dd>
 
-      </div>
-
-
-    </dl>
-
-   
-
-  
-    
-    <p style="font-weight: bold; font-size:36px;">
-      Outstanding balance due: £50
-
-    </p>
-
-  </div>
-</div>
-<p>You cannot change this on the next page.</p>
-<h3>Amount to pay</h3>
 
 <div class="nhsuk-form-group">
+  <label class="nhsuk-label" for="example">
+    Amount to pay
+  </label>
   <p class="">£
   <input class="nhsuk-input nhsuk-input--width-5" id="input-width-5" name="test-width-5" type="text">
 </p>
@@ -88,6 +105,8 @@ Pay by card
           </fieldset>
         
         </div>
+
+        <p>You cannot change this on the next page.</p>
     <div class="nhsuk-form-group">
     <button class="nhsuk-button" type="submit">
      Continue
