--- a/app/views/v6-pcn/pay-by-dd.html
+++ b/app/views/v6-pcn/pay-by-dd.html
@@ -60,7 +60,7 @@ Paying by Direct Debit
                     I understand that if you are unable to take payments on more than one occasion, I might have to pay extra charges and may not be able to pay by Direct Debit again
                   </label>
                 </div><br>
-        <p>Read the <a href="">Direct Debit Guarantee</a></p>
+        <p>Read the <a href="https://www.directdebit.co.uk/direct-debit-explained/direct-debit-guarantee/">Direct Debit Guarantee</a>.</p>
               </div>
             </fieldset>
         
