--- a/app/views/v6-pcn/penalty-charge-notice-details.html
+++ b/app/views/v6-pcn/penalty-charge-notice-details.html
@@ -111,7 +111,7 @@
         </dl>
       </div> -->
 
-      <p>It can take up to 24 hours for payment information to update.</p>
+      
     <div class="nhsuk-card">
       <div class="nhsuk-card__content">
         <h2 class="nhsuk-card__heading">
@@ -122,7 +122,7 @@
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Total prescription charge you claimed:
+              Total prescription charge
             </dt>
             <dd class="nhsuk-summary-list__value">
               £9.65
@@ -132,7 +132,7 @@
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Additional penalty charge:
+               Penalty charge
             </dt>
             <dd class="nhsuk-summary-list__value">
               £48.25
@@ -141,7 +141,7 @@
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Total amount:
+              Total amount
             </dt>
             <dd class="nhsuk-summary-list__value">
               £57.90
@@ -167,7 +167,7 @@
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Payments made:
+              Payments made
             </dt>
             <dd class="nhsuk-summary-list__value">
               £7.90
@@ -181,13 +181,13 @@
 
         </dl>
         <p style="font-weight: bold; font-size:36px;">
-          Outstanding balance: £50
+         Amount still to pay: £50
 
         </p>
 
       </div>
     </div>
-
+    <p>If you have recently made a payment, it can take 24 hours for payment information to update.</p>
 
 
     
@@ -280,7 +280,7 @@
           Date prescription was claimed
         </dt>
         <dd class="nhsuk-summary-list__value">
-          Between 1 November and 30 November 2017
+         On 21 April 2021
         </dd>
 
       </div>
@@ -299,7 +299,7 @@
   </div>
 
 </div>
-<a href="what-you-need-to-do-next" class="nhsuk-button">
+<a href="what-you-need-to-do-next-bsa" class="nhsuk-button">
   Continue
 </a>
 <style>
@@ -310,6 +310,6 @@
   }
 </style>
 {% endblock %}
-            
-            
+         
+
       
