--- a/app/views/v6-pcn/dd-check-answers.html
+++ b/app/views/v6-pcn/dd-check-answers.html
@@ -47,7 +47,7 @@
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="enter-bank-details" method="post" class="form">
+    <form action="confirm-direct-debit" method="post" class="form">
 
       <span class="nhsuk-caption-m">Confirm your entitlement</span>
       <h1 class="nhsuk-heading-l">Check your answers are correct</h1>
@@ -99,6 +99,68 @@
         </div>
       </dl>
 
+      <h3 class="nhsuk-heading-m">Your bank details</h3>
+    <dl class="nhsuk-summary-list">
+
+      <div class="nhsuk-summary-list__row">
+        <dt class="nhsuk-summary-list__key">
+         Account holder's name
+        </dt>
+        <dd class="nhsuk-summary-list__value">
+         Michelle Doe
+        </dd>
+
+        <dd class="nhsuk-summary-list__actions">
+
+          <a href="enter-bank-details">
+            Change<span class="nhsuk-u-visually-hidden"> name</span>
+          </a>
+
+        </dd>
+    
+        
+      </div>
+
+      <div class="nhsuk-summary-list__row">
+        <dt class="nhsuk-summary-list__key">
+          Account number
+        </dt>
+        <dd class="nhsuk-summary-list__value">
+         12345678
+        </dd>
+
+        <dd class="nhsuk-summary-list__actions">
+
+          <a href="enter-bank-details">
+            Change<span class="nhsuk-u-visually-hidden"> name</span>
+          </a>
+
+        </dd>
+    
+        
+      </div>
+      <div class="nhsuk-summary-list__row">
+        <dt class="nhsuk-summary-list__key">
+         Sort code
+        </dt>
+        <dd class="nhsuk-summary-list__value">
+         12 34 56
+        </dd>
+
+        <dd class="nhsuk-summary-list__actions">
+
+          <a href="enter-bank-details">
+            Change<span class="nhsuk-u-visually-hidden"> name</span>
+          </a>
+
+        </dd>
+    
+        
+      </div>
+      
+    
+    </dl>
+
 
 
 
@@ -113,7 +175,7 @@
     cleared.</p>
 
 
-    <h3>Your payment summary</h3>
+    <!-- <h3>Your payment summary</h3>
 
     <dl class="nhsuk-summary-list">
 
@@ -164,7 +226,7 @@
 
       </div>
     </dl>
-    <p>You're responsible for making sure that payments can be taken on these dates.</p>
+    <p>You're responsible for making sure that payments can be taken on these dates.</p> -->
 
     <h3>We will send confirmation of your Direct Debit to this address</h3>
     <dl class="nhsuk-summary-list">
@@ -193,6 +255,7 @@
 
       
     </dl>
+    <p>You will confirm your Direct Debit set-up on the next page.</p>
 
     <div class="nhsuk-form-group">
       <button class="nhsuk-button" type="submit">
