--- a/app/views/v6-pcn/enter-bank-details.html
+++ b/app/views/v6-pcn/enter-bank-details.html
@@ -35,17 +35,17 @@ Enter your bank details
     
     <div class="nhsuk-form-group">
       <label class="nhsuk-label" for="input-width-10">
-        <b>Account holder's name</b>
+        Account holder's name
       </label>
       <input class="nhsuk-input nhsuk-input--width-10" id="input-width-20" name="test-width-20" type="text">
       <br><br>
       <label class="nhsuk-label" for="example-with-hint-text">
-        <b>Account number</b>
+        Account number
       </label>
       <input class="nhsuk-input nhsuk-input--width-10" id="example-with-hint-text" name="example-with-hint-text" type="text" inputmode="numeric">
       <br><br>
       <label class="nhsuk-label" for="input-width-2">
-        <b>Sort code</b>
+        Sort code
       </label>
       <input class="nhsuk-input nhsuk-input--width-2" id="input-width-2" name="test-width-2" type="text" inputmode="numeric"> <input class="nhsuk-input nhsuk-input--width-2" id="input-width-2" name="test-width-2" type="text" inputmode="numeric">  <input class="nhsuk-input nhsuk-input--width-2" id="input-width-2" name="test-width-2" type="text" inputmode="numeric">
       
@@ -54,9 +54,9 @@ Enter your bank details
 ​
 
 
-    <p>You will confirm your Direct Debit set-up on the next page.</p>
+    
 ​
-    <a class="nhsuk-button" data-module="nhsuk-button" type="submit" href="confirm-direct-debit">
+    <a class="nhsuk-button" data-module="nhsuk-button" type="submit" href="dd-check-answers">
       Continue
     </a>
 ​
