--- a/app/views/v6-pcn/full-payment-made.html
+++ b/app/views/v6-pcn/full-payment-made.html
@@ -38,7 +38,7 @@ Payment confirmation
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Penalty Charge Notice reference number:
+              Penalty Charge Notice reference number
             </dt>
             <dd class="nhsuk-summary-list__value">
               123456789
@@ -50,7 +50,7 @@ Payment confirmation
         
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              You've paid:
+              You've paid
             </dt>
             <dd class="nhsuk-summary-list__value">
               £57.90
