--- a/app/views/v6-pcn/pay-by-card.html
+++ b/app/views/v6-pcn/pay-by-card.html
@@ -26,9 +26,9 @@ Pay by card
       <form action="gov-pay" method="post" class="form">
 
         <span class="nhsuk-caption-m">Pay a Penalty Charge Notice</span>
-        <h1 class="nhsuk-heading-l">Pay by card</h1>
+        <h1 class="nhsuk-heading-l">How much are you paying today?</h1>
         <div class="nhsuk-form-group">
-<h2 class="nhsuk-heading-m">How much are you paying today?</h2>
+
 <p>It can take up to 24 hours for payment information to update.</p>
 <p>Total amount: £123.80</p>
 <p>Payment made: £0.00</p>
