--- a/app/views/v6-pcn/pcn-balance.html
+++ b/app/views/v6-pcn/pcn-balance.html
@@ -122,7 +122,7 @@
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Prescription charges:
+              Prescription charges
             </dt>
             <dd class="nhsuk-summary-list__value">
               £23.80
@@ -132,7 +132,7 @@
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Penalty charge:
+              Penalty charge
             </dt>
             <dd class="nhsuk-summary-list__value">
               £100.00
@@ -141,7 +141,7 @@
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Total amount:
+              Total amount
             </dt>
             <dd class="nhsuk-summary-list__value">
               £123.80
@@ -159,7 +159,7 @@
 
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">
-              Payments made:
+              Payments made
             </dt>
             <dd class="nhsuk-summary-list__value">
               £23.80
