--- a/app/views/v6-pcn/who-can-ask-for-review.html
+++ b/app/views/v6-pcn/who-can-ask-for-review.html
@@ -8,7 +8,13 @@ Asking for a review
 
 {% block content %}
 
- 
+ <div class="nhsuk-back-link">
+  <a class="nhsuk-back-link__link" href="javascript:history.go(-1)">
+    <svg class="nhsuk-icon nhsuk-icon__chevron-left" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true" height="24" width="24">
+      <path d="M8.5 12c0-.3.1-.5.3-.7l5-5c.4-.4 1-.4 1.4 0s.4 1 0 1.4L10.9 12l4.3 4.3c.4.4.4 1 0 1.4s-1 .4-1.4 0l-5-5c-.2-.2-.3-.4-.3-.7z"></path>
+    </svg>
+    Go back</a>
+  </div>
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
       <span class="nhsuk-caption-m">Confirm your entitlement</span>
@@ -22,7 +28,7 @@ Asking for a review
       
 
       <h2>Reasons we will not usually accept</h2>
-      <p>We will not usually review your enquiry letter if:</p>
+      <p>We will not usually review your Penalty Charge Notice if:</p>
       <ul>
         <li>your exemption certificate had expired</li>
         <li>you feel that you were misadvised by your GP or by pharmacy staff</li>
@@ -30,7 +36,7 @@ Asking for a review
         <li>you thought your prescription prepayment certificate would automatically renew</li>
       </ul>
       <h3>What to do next</h3>
-      <p>If you have an exceptional reason why you made the claim at the time, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">contact us to review your enquiry letter</a>.</p>
+      <p>If you have an exceptional reason why you made the claim at the time, <a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">contact us to review your Penalty Charge Notice</a>.</p>
        <p>When you contact us you must include your:</p>     
        <ul>
         <li>reference number 11193492846</li>
@@ -39,10 +45,12 @@ Asking for a review
         <li>address including postcode</li>
       </ul>
           
-      <h3>If you're not entitled to a review</h3>
-      <p>You will be sent a Penalty Charge Notice. This will include information on how and when to pay your penalty charge.</p>
+      <h3>If the review is successful</h3>
+      <p>Your penalty charge will be reduced or removed. You will still need to pay the original prescription charge.</p>
   
-      
+      <h3>If the review is unsuccessful</h3>
+      <p>You will need to pay both the penalty charge and the original prescription charge.</p>
+  
     </div>
   </div>
   <style>
