Added Direct Debit error state

--- a/app/views/adhoc.html
+++ b/app/views/adhoc.html
@@ -637,6 +637,16 @@ NHS.UK prototype kit
             </tr>
 
           </tbody>
+          <tbody class="nhsuk-table__body">
+            <tr role="row" class="nhsuk-table__row">
+              <td class="nhsuk-table__cell">Paying by Direct Debit last checkbox unticked</td>
+              <td class="nhsuk-table__cell "><a href="v6-pcn/error-messages/paying-by-direct-debit-error">Last checkbox unticked</a></td>
+              <td class="nhsuk-table__cell"><strong class="nhsuk-tag">
+                  BOTH
+                </strong></td>
+            </tr>
+
+          </tbody>
         </table>
       </div>
     </details>
