partial & full payment screens content updates

--- a/app/views/v6-pcn/full-payment-made.html
+++ b/app/views/v6-pcn/full-payment-made.html
@@ -75,8 +75,16 @@ Payment confirmation
       </p></a>
 
       <h3>How to avoid a Penalty Charge Notice in the future</h3>
+      <p>We match exemptions using a combination of your:</p>
+      <ul>
+        <li>name</li>
+        <li>address</li>
+        <li>date of birth</li>
+        <li>NHS number</li>
+      </ul>
+
         <p>Make sure your details are correct at your GP surgery, dental practice, and any benefits organisations.</p>
-     <p>If any of your details are not up to date, you may receive another enquiry letter in the future.</p>
+     <p>If any of your details are not up to date, you may receive another Penalty Charge Notice in the future.</p>
         
      <div class="nhsuk-action-link">
       <a class="nhsuk-action-link__link" href="https://www.nhs.uk/service-search/minor-injuries-unit/locationsearch/551">
@@ -89,7 +97,7 @@ Payment confirmation
     </div>
         
 <h3>Feedback</h3>
-<p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us to provide a better service.</p>
+<p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
 <p><a href="">Leave feedback</a></p>
    
 
