--- a/app/views/v6-pcn/partial-payment-made.html
+++ b/app/views/v6-pcn/partial-payment-made.html
@@ -79,9 +79,8 @@ Payment confirmation
       
       </div>
       <h3>Further payments</h3>
-      <p>To make further payments, return to the service.</p>
+      <p>You can use this service to pay the remaining amount of <strong>£25</strong>.</p>
 
-     <p>Pay the remaining amount of <strong>£25</strong>.</p>
       <a href="payment-choice"><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
         Make another payment
       </button></a>
@@ -90,8 +89,15 @@ Payment confirmation
         Print this page
       </p></a>
       <h2>How to avoid a Penalty Charge Notice in the future</h2>
+      <p>We match exemptions using a combination of your:</p>
+      <ul>
+        <li>name</li>
+        <li>address</li>
+        <li>date of birth</li>
+        <li>NHS number</li>
+      </ul>
         <p>Make sure your details are correct at your GP surgery, dental practice, and any benefits organisations.</p>
-     <p>If any of your details are not up to date, you may receive another enquiry letter in the future.</p>
+     <p>If any of your details are not up to date, you may receive another Penalty Charge Notice in the future.</p>
         
 
      <div class="nhsuk-action-link">
@@ -106,7 +112,7 @@ Payment confirmation
       
         
 <h3>Feedback</h3>
-<p>Leaving feedback only takes 5 minutes. Your comments are extremely helpful and will help us to provide a better service.</p>
+<p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
 <p><a href="">Leave feedback</a></p>
    
 
