--- a/app/views/v6-pcn/payment-choice.html
+++ b/app/views/v6-pcn/payment-choice.html
@@ -92,7 +92,7 @@ Pay by card
           </div>
         </div>
         <p>You can either pay the full amount in one payment or split it across several payments.</p>
-        <p>If you have recently made a payment, it can take up to 24 hours or payment information to update.</p>
+        <p>If you have recently made a payment, it can take up to 24 hours for payment information to update.</p>
         <h2>Do you want to pay the full amount still to pay?</h2>
         <div class="nhsuk-form-group">
 
