--- a/app/views/v6-pcn/penalty-charge-notice-details-bsa.html
+++ b/app/views/v6-pcn/penalty-charge-notice-details-bsa.html
@@ -288,7 +288,7 @@
 
     <p>If you were entitled to free NHS prescriptions, answering some questions to confirm this can help us resolve this
       issue.</p>
-    <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you cana pay by
+    <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by
       either:</p>
     <ul>
       <LI>debit or credit card</LI>
