--- a/app/views/v6-pcn/penalty-charge-notice-details.html
+++ b/app/views/v6-pcn/penalty-charge-notice-details.html
@@ -63,7 +63,7 @@
         </span>
       </h3>
       <p>You now have 10 days to either confirm you were entitled to free NHS prescriptions, or pay this Penalty Charge
-        Notice (by 06 September 2021). <br><br>If you do not respond, an extra surcharge of up to £50 will be added to
+        Notice (by 06 September 2021). <br><br>If you do not respond, an extra surcharge of up to £50 may be added to
         these charges.</p>
     </div>
 
