Payment declined pages added

--- a/app/views/v6-pcn/payment-not-authorised.html
+++ b/app/views/v6-pcn/payment-not-authorised.html
@@ -24,27 +24,26 @@
 {% endblock %}
 
 {% block content %}
+<div class="nhsuk-grid-row">
+  <div class="nhsuk-grid-column-two-thirds">
+    <span class="nhsuk-caption-l">Pay a Penalty Charge Notice</span>
+    <h1>
+      Your payment has not been authorised
+    </h1>
+  
+    <p>We have not taken any money from your account.</p>
+    <p>You can try to make a payment again.</p>
+    <p>We recommend that you contact your bank for more details if this issue continues.</p>
 
+    <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
+      Try payment again
+    </button>
 
-  <div class="nhsuk-grid-row">
-    <div class="nhsuk-grid-column-two-thirds">
-      
-      <h1 class="nhsuk-heading-l">
-        More information needed
-      </h1>
-    
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us</a> if you want to pay over the phone or have any other questions.</p>
 
-      <p>We have been unable to confirm your identity using the information you’ve provided.</p>
-      <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs">Contact us if you have received a letter</a>.</p>
-      
-      <h3>Feedback</h3>
-      <p>Leaving feedback takes 5 minutes. Your comments will help us to provide a better service.</p>
-      <p><a href="">Leave feedback</a></p>
-           
-    </div>
-  </div>
-
-  <style>
+</div>
+</div>
+<style>
   
   </style>
 {% endblock %}
