Updated content for Enquiry Letter details locked screen

--- a/app/views/v5-enquiry/adhoc-screens/enquiry-letter-details-locked.html
+++ b/app/views/v5-enquiry/adhoc-screens/enquiry-letter-details-locked.html
@@ -57,16 +57,9 @@
       <p>We have not been able to confirm you were entitled to free NHS prescriptions using these details.</p>
       <dl class="nhsuk-summary-list">
 
-        <div class="nhsuk-summary-list__row">
-          <dt class="nhsuk-summary-list__key">
-            Date prescription was claimed
-          </dt>
-          <dd class="nhsuk-summary-list__value">
-            Between 1 November and 30 November 2017
-          </dd>
+        
       
-        </div>
-        </dl>
+        
       <h3>Details on the prescription</h3>
       <dl class="nhsuk-summary-list">
         <div class="nhsuk-summary-list__row">
@@ -99,17 +92,30 @@
           </dd>
       
         </div>
-        
-      </dl>
-      <p>If you were entitled to free NHS prescriptions, answering some questions to confirm this can help us resolve this issue. We can check if you had an exemption certificate or qualifying benefit, or if you had a valid prepayment certificate.</p>
+
+        <div class="nhsuk-summary-list__row">
+          <dt class="nhsuk-summary-list__key">
+            Date prescription was claimed
+          </dt>
+          <dd class="nhsuk-summary-list__value">
+            <p>Between 1 November and 30 November 2017.</p>
+            
+          </dd>
+      
+        </div>
+
       </dl>
 
+      
 
-        <h3>Challenge</h3>
-        <p>You cannot do anything more to challenge your enquiry letter online at the moment. If you have been asked to send proof to help us review your case, you should send this to us as soon as possible.</p>
-        <P><a href="">If you still need to contact us about your enquiry letter</a></P>
-     
-   
+      
+      <p>You cannot do anything more to confirm your entitlement online at the moment.</p>
+    
+      <p>If we've asked you to send proof to help us review your case, you should send this as soon as possible.</p>
+
+      <p><a href="">Contact us if you have any further queries about your enquiry letter.</a></p>
+
+
   </div>
   <!-- <a href="what-you-want-to-do-next" class="nhsuk-button">
     Continue
